--- a/CraftServ/CraftServ.csproj
+++ b/CraftServ/CraftServ.csproj
@@ -41,4 +41,7 @@
     <Compile Include="csLogger.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <None Include="LICENSE.txt" />
+  </ItemGroup>
 </Project>
