--- a/CraftServ/CraftServ.csproj
+++ b/CraftServ/CraftServ.csproj
@@ -33,6 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Substrate, Version=0.7.2.0, Culture=neutral, PublicKeyToken=null">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Substrate.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
@@ -43,5 +47,10 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="LICENSE.txt" />
+    <None Include="Ionic.Zlib.dll" />
+    <None Include="Substrate.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Packets\" />
   </ItemGroup>
 </Project>
